--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 body {
-  background-color:#eebb8b
+  background-color:#f5d2b2
 
   ;
   font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif" font-size 20px;
