--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,8 @@ body {
 cursor: url(https://cur.cursors-4u.net/symbols/sym-1/sym13.cur), auto !important;} 
 
 a {
-  color: #ffd900
+  color: #c6a904
+
   
 }
 
@@ -36,7 +37,7 @@ img {
 }
 
 h3 {
-  color: #ffd900
+  color: #c6a904
   ;
 }
 
